[package]
name = "yales-netflow-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive", "env"] }
netflow_parser = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "tracing",
] }
