[package]
name = "yales-netflow-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
netflow_parser = "1.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "tracing",
] }
