[package]
name = "yales-netflow-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
netflow_parser = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "tracing",
] }
